Updated responsive CSS style in product view

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
 
             <div v-if="!isShowingCart" id="products" class="row list-group">
-                <div v-for="product in products" class="item col-xs-4">
+                <div v-for="product in products" class="item col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="http://placehold.it/400x250/000/fff">
                         <div class="caption">
